# VELM

./: .gitignore  README.md  pyproject.toml
.planning/: PROJECT.md  ROADMAP.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/1.1-mythos-upgrade/: CONTEXT.md  PLAN.md
.trunk/: trunk.yaml
backups/: velm_colab.ipynb  velm_colab.ipynb.bak-20260426-010117  velm_colab.py  velm_experiments.ipynb
docs/: architecture.md  experiments.md  paper_outline.md  synergies.md
docs/project-notes/: go_mhc_integration.md  implementation_plan.md  markov_chain_connections.md  parameter_efficiency_strategy.md  velm_design_review.md  walkthrough.md
notebooks/: velm_colab.ipynb  velm_colab.py  velm_experiments.ipynb
references/: bibliography.md
scratch/: apply_notebook_fixes.py  clean_nb.py  clean_nb_final.py  clean_nb_v2.py  clean_nb_v3.py  fix_imports.py
scripts/: py_to_ipynb.py  train_autoencoder.py  train_velm.py
src/: __init__.py
src/evolution/: __init__.py  gea_eggroll.py
src/inference/: __init__.py  cib_budget.py  qttt.py
src/model/: __init__.py  autoencoder.py  config.py  energy_head.py  hyper_connections.py  miras_backbone.py  velm.py
src/training/: __init__.py  data_loader.py  diagnostics.py  distillation.py  eggroll.py  fitness.py  velm_fitness.py
tests/: test_config.py  test_mythos_backbone.py  test_smoke.py
